- Added a custom minimum length rule instead of using the FormIt one (FormIt would not allow and empty field that had a minimum length). Users frequently want a non required field with a minumum length.
- Added new FormItBuilder_elementDate element that allows date selection via a series of three dropdowns for date/month/year.

FormItBuilder 1.3.0-pl
====================================
- Added Auto Responder systems
- Repair bug in FormRuleType::date causing issues with javascript validation. (Thanks for the report Kiel)
- Removed default "Created by FormItBuilder" form title attribute.
- Added a lot of documentation

FormItBuilder 1.2.0-pl
====================================
- Repair bug in FormItBuilder_elementCheckboxGroup HTML output (missing open div)

FormItBuilder 1.1.0-pl
====================================
- Added new hidden field element (FormItBuilder_elementHidden) by default it doesn't appear in email output. Use showInEmail to send into email.

FormItBuilder 1.0.1-pl
====================================
- Added new FormItBuilder_elementCheckboxGroup element (Thanks for the assistance Michelle)
- Added setDescription method on form element classes (Allows a sub label to be displayed within the main label - Good suggestion Michelle)
- Modified architecture of FormItBuilder_customValidation
- More code comments

FormItBuilder 0.1.9-rc3
====================================
- Fixed a great number of trivial PHP errors in the ModX error log (Thanks for the report Alex)
- Fixed some glitches in date custom validation
- Code comments

FormItBuilder 0.1.9-rc2
====================================
- Added element type class to element wrappers (for extra CSS flexibility)
- Add title attributes
- Added default value for text field.
- Fix single digit date issues with date field
- Added ability to output javascript into a placeholder with the setPlaceholderJavascript method.
- Added "store" FormIt config option.
- Added captcha support