@@ -1,8 +1,8 @@
 ----------------------
 Snippet: FormItBuilder
 ----------------------
-Version: 1.3.0 pl
-Created: May 12, 2012
+Version: 1.3.2 pl
+Created: May 26, 2012
 Author: Marcus House
 
 A small framework to assist in quick development of FormIt forms and emails. Using a snippet (with some basic PHP commands) a complex form can be built much faster, and can automatically use the jQuery plugin "Validation" methods
